--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "react-router-dom": "^6.15.0",
     "firebase": "^10.4.0"
   },
