--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-
+VITE_FIREBASE_API_KEY=AIzaSyBz12rJWnXLbcmC1NaHvymCZ0i4WowljtQ
+VITE_FIREBASE_AUTH_DOMAIN=movieshub-f7c9d.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=movieshub-f7c9d
+VITE_FIREBASE_STORAGE_BUCKET=movieshub-f7c9d.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=234358986405
+VITE_FIREBASE_APP_ID=1:234358986405:web:0d3aa61caae4a04dd41f4c
+VITE_FIREBASE_MEASUREMENT_ID=G-B5G0G3KVW5
