--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "firebase": "^10.4.0",
-    "react-helmet-async": "^2.0.4"
+    "react-helmet-async": "^2.0.4",
     "@fortawesome/fontawesome-free": "^6.4.0"
   },
   "devDependencies": {
