--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "movieshub",
+  "name": "ytmovieshub",
   "version": "1.0.0",
-  "description": "YouTube-like movie streaming platform",
+  "description": "YTMoviesHub - YouTube-like movie streaming platform",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -22,7 +22,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.4.0"
   },
-  "keywords": ["movies", "streaming", "react", "firebase"],
-  "author": "MoviesHub Team",
+  "keywords": ["movies", "streaming", "react", "firebase", "ytmovieshub"],
+  "author": "YTMoviesHub Team",
   "license": "MIT"
 }
