--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "YTMoviesHub - YouTube-like movie streaming platform",
   "scripts": {
-    "build": "node generateSitemap.jsx && react-scripts build",
+    "prebuild": "node src/sitemap-generator.jsx",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
