--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "YTMoviesHub - YouTube-like movie streaming platform",
   "scripts": {
-    "prebuild": "node scripts/generate-sitemap.jsx",
-    "dev": "vite",
+    "prebuild": "node scripts/generate-sitemap.js",
+    "dev": "vite"
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build"
