--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "YTMoviesHub - YouTube-like movie streaming platform",
   "scripts": {
-    "prebuild": "node scripts/generate-sitemap.js",
+    "prebuild": "node scr/generate-sitemap.js",
     "dev": "vite"
     "build": "vite build",
     "preview": "vite preview",
