--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "YTMoviesHub - YouTube-like movie streaming platform",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build"
